# nodegen-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
npm/: LICENSE  README.md  index.js  package.json
src/: main.rs
src/cli/: mod.rs
src/generator/: additions.rs  mod.rs  structure.rs
src/templates/: app.rs  auth.rs  config.rs  database.rs  middleware.rs  mod.rs  modules.rs  package_json.rs  production.rs  routes.rs  server.rs  testing.rs  tsconfig.rs  utils.rs
src/utils/: printer.rs
