[package]
name = "node-project-gen"
version = "0.0.3"
edition = "2021"
authors = ["Naimish Kumar Verma <vnaimish19@gmail.com>"]
description = "⚡ Blazing fast, architecture-aware Node.js backend generator. Scaffold production-ready projects in under 1 second."
license = "MIT"
readme = "README.md"
repository = "https://github.com/naimishverma/nodegen-cli"
keywords = ["node", "backend", "scaffolding", "architecture", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "node-project-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
